Added top and bottom banners.
Added placeholder photo for the top banner and
bottom banner/trim then made both responsive.

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,9 @@
             <p class="text-sm">Menu</p>
         </div>
             
-        <div class="banner-top">Banner Top</div>
+        <div class="banner-top">
+            <img src="./img/top-banner-desktop.jpg" alt="top banner" height="100%" width="auto">
+        </div>
         <div class="content">
             <section class="summary">
                 <div class="card">
@@ -99,7 +101,7 @@
             </div>
             <p class="copyright">© 2004 - 2024 Copyright Philiphe Phan Van Minh. All Rights Reserved.</p>
             <span></span>
-            <div class="banner-bottom">Banner Bottom</div>
+            <div class="banner-bottom"></div>
         </footer>
     </div>
     <script>
