--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
         </div>
             
         <div class="banner-top">
-            <img src="./img/top-banner-desktop.jpg" alt="top banner" height="100%" width="auto">
+            <img src="./img/top-banner-desktop-v2.jpg" alt="top banner" height="100%" width="auto">
         </div>
         <div class="content">
             <section class="summary">
