--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Trirong:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Yeseva+One&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/07de4dcbe0.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="wrap">
@@ -95,9 +96,22 @@
         </div>
         <footer>
             <div class="socials">
-                <div class="social">Facebook</div>
-                <div class="social">Instagram</div>
-                <div class="social">Church</div>
+                
+                <div class="social">
+                    <a href="https://www.facebook.com/Hoitetvenguonorlando/"  target="_blank">
+                        <i class="fa-brands fa-square-facebook icon"></i>Facebook
+                    </a>
+                </div>
+                <div class="social">
+                    <a href="https://www.instagram.com/orlandotetfestival/?hl=en"  target="_blank">
+                        <i class="fa-brands fa-square-instagram icon"></i>Instagram
+                    </a>
+                </div>
+                <div class="social">
+                    <a href="https://www.philipminh.church" target="_blank">
+                        <i class="fa-solid fa-church icon" ></i>Church
+                    </a>
+                </div>
             </div>
             <p class="copyright">© 2004 - 2024 Copyright Philiphe Phan Van Minh. All Rights Reserved.</p>
             <span></span>
