--- a/src/index.html
+++ b/src/index.html
@@ -87,7 +87,9 @@
                 <section id="venue" class="venue">
                     <h1 class="section-heading">Venue</h1>
                     <div class="card">
-                        <div class="card-inner">Map</div>
+                        <div class="card-inner">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7008.937086479451!2d-81.44029442512888!3d28.55568987570673!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e7799023a6a435%3A0xb21922b1d71bb593!2sCentral%20Florida%20Fair!5e0!3m2!1sen!2sus!4v1728420883387!5m2!1sen!2sus" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        </div>
                     </div>
                 </section>
             </div>
@@ -105,7 +107,7 @@
             <section id="contact" class="contact">
                 <h1 class="section-heading">Contact Information</h1>
                 <div class="card">
-                    <ul class="contacts">
+                    <ul class="contacts"> 
                         <li class="contact">
                             <h4>Trưởng Ban Tổ Chức</h4>
                             <p>Anh Trần Ngọc Dũng</p>
