Implement schedule section
I implmented a schedule section that parses
json files with the events. I also
started implmenting an automtic refresh on the
event list but am working on that.

--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,15 @@
                 <section id="schedule" class="schedule">
                     <h1 class="section-heading">Schedule</h1>
                     <div class="card">
-                        <div class="card-inner">Schedule Content</div>
+                        <div class="card-inner">
+                            <div class="btn-group">
+                                <button id="sat_btn" class="active">Sat</button>
+                                <button id="sun_btn">Sun</button>
+                            </div>
+                            <ul id="event_list" class="event_list">
+                                
+                            </ul>
+                        </div>
                     </div>
                 </section>
                 <section id="venue" class="venue">
