Edit nav-btn for better contrast

--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
                 </ul>
             </div>
         </header>
-        <div class="nav-btn" onClick="handleNavAnimation()">
+        <button class="nav-btn" onClick="handleNavAnimation()">
             <div>
                 <span></span>
                 <span></span>
                 <span></span>
             </div>
             <p class="text-sm">Menu</p>
-        </div>
+        </button>
             
         <header></header>
         <div class="banner-top">
