--- a/index.html
+++ b/index.html
@@ -142,15 +142,15 @@
                               <!-- Slides -->
                               <div class="swiper-slide">
                                 <img src="./img/rav4/front.png" alt="">
-                                <div class="caption">Grand Prize: 2024 Toyota Rav4</div>
+                                <div class="caption">1st Place: 2024 Toyota Rav4</div>
                               </div>
                               <div class="swiper-slide">
-                                <img src="./img/rav4/side.png" alt="">
-                                <p class="caption">Grand Prize: 2024 Toyota Rav4</p>
+                                <img src="./img/rav4/gift card" alt="">
+                                <p class="caption">2nd Place: $1000 Gift Card</p>
                               </div>
                               <div class="swiper-slide">
-                                <img src="./img/rav4/back.png" alt="">
-                                <p class="caption">Grand Prize: 2024 Toyota Rav4</p>
+                                <img src="./img/rav4/gift card" alt="">
+                                <p class="caption">3rd Place: $500 Gift Card</p>
                               </div>
                             </div>
                             <!-- If we need pagination -->
