--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="header">
             <div class="header-inner">
                 <h1 class="header-logo">
-                    <a href="https://www.philipminh.church">
+                    <a href="https://www.philipminh.church"  target="_blank">
                         <img src="./img/logo.png" alt="church logo">
                     </a>
                 </h1>  
@@ -33,10 +33,10 @@
                         <a href="#venue">Venue</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#contact">Contact</a>
-                    </li>
-                    <li class="nav-item">
                         <a href="#raffle">Raffle</a>
+                    </li>
+                      <li class="nav-item">
+                        <a href="#contact">Contact</a>
                     </li>
                 </ul>
                 <hr>
@@ -145,11 +145,11 @@
                                 <div class="caption">1st Place: 2024 Toyota Rav4</div>
                               </div>
                               <div class="swiper-slide">
-                                <img src="./img/rav4/gift card" alt="">
+                                <img src="./img/gift-card.png" alt="">
                                 <p class="caption">2nd Place: $1000 Gift Card</p>
                               </div>
                               <div class="swiper-slide">
-                                <img src="./img/rav4/gift card" alt="">
+                                <img src="./img/gift-card.png" alt="">
                                 <p class="caption">3rd Place: $500 Gift Card</p>
                               </div>
                             </div>
